cc_library(
    name = "tsmuxer",
    srcs = glob(["*.cpp"]),
    hdrs = glob(["**/*.h"]),
    include_prefix = "tsmuxer",
    visibility = ["//visibility:public"],
)

objc_library(
    name = "tsmuxer_objc",
    srcs = glob(["*.cpp"]),
    hdrs = glob(["include/*.h"]),
    textual_hdrs = glob(["*.h"]),
    module_name = "TsMuxer",
    visibility = ["//visibility:public"],
)
